; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_wpas_module_tests.c_wpas_module_tests.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_wpas_module_tests.c_wpas_module_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"wpa_supplicant module tests\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wpas_module_tests() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @MSG_INFO, align 4
  %3 = call i32 @wpa_printf(i32 %2, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %4 = call i64 (...) @wpas_blacklist_module_tests()
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %7

7:                                                ; preds = %6, %0
  %8 = call i64 (...) @utils_module_tests()
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 -1, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %7
  %12 = call i64 (...) @common_module_tests()
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 -1, i32* %1, align 4
  br label %15

15:                                               ; preds = %14, %11
  %16 = call i64 (...) @crypto_module_tests()
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 -1, i32* %1, align 4
  br label %19

19:                                               ; preds = %18, %15
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @wpa_printf(i32, i8*) #1

declare dso_local i64 @wpas_blacklist_module_tests(...) #1

declare dso_local i64 @utils_module_tests(...) #1

declare dso_local i64 @common_module_tests(...) #1

declare dso_local i64 @crypto_module_tests(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
